--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@nx/linter": "16.7.0",
     "@nx/nest": "16.7.0",
     "@nx/node": "16.7.0",
+    "@nx/playwright": "16.7.0",
     "@nx/webpack": "16.7.0",
     "@nx/workspace": "16.7.0",
     "@types/express": "4.17.17",
@@ -120,4 +121,3 @@
     "validator": "13.11.0"
   }
 }
-
